fixed bug where a card is replaced after being selected if another player attempts to flip a card